// Vitest Snapshot v1

exports[`Activity component > should display 1`] = `<DocumentFragment />`;

exports[`Activity component > should display CHANGE_USERNAME 1`] = `
<DocumentFragment>
  <div
    class="_notice_ffcd92 _info_ffcd92"
  >
    <span>
      <span
        class="username"
        style="color: rgb(241, 250, 140);"
      >
        alice
      </span>
       changed their name to 
      <span
        class="username"
        style="color: rgb(80, 250, 123);"
      >
        alicette
      </span>
    </span>
  </div>
</DocumentFragment>
`;

exports[`Activity component > should display NOTICE 1`] = `
<DocumentFragment>
  <div
    class="_notice_ffcd92 _info_ffcd92"
  >
    Hello world!
  </div>
</DocumentFragment>
`;

exports[`Activity component > should display RECEIVE_FILE 1`] = `
<DocumentFragment>
  <div>
    <span>
      <span
        class="username"
        style="color: rgb(241, 250, 140);"
      >
        alice
      </span>
       sent you a file.
    </span>
     
    <a
      download="alice.pdf"
      href="url:[object Blob]"
      rel="noopener noreferrer"
      target="_blank"
    >
      <span>
        Download alice.pdf
      </span>
    </a>
  </div>
</DocumentFragment>
`;

exports[`Activity component > should display RECEIVE_FILE with image 1`] = `
<DocumentFragment>
  <div>
    <span>
      <span
        class="username"
        style="color: rgb(241, 250, 140);"
      >
        alice
      </span>
       sent you a file.
    </span>
     
    <a
      download="alice.jpg"
      href="url:[object Blob]"
      rel="noopener noreferrer"
      target="_blank"
    >
      <span>
        Download alice.jpg
      </span>
    </a>
    <img
      alt="alice.jpg from alice"
      class="image-transfer zoomable"
      src="data:image/jpg;base64,dGV4dGZpbGU="
    />
  </div>
</DocumentFragment>
`;

exports[`Activity component > should display SEND_FILE 1`] = `
<DocumentFragment>
  <div
    class="_notice_ffcd92 _info_ffcd92"
  >
    <span>
      You sent 
      <a
        download="alice.pdf"
        href="url:[object Blob]"
        rel="noopener noreferrer"
        target="_blank"
      >
        alice.pdf
      </a>
    </span>
     
  </div>
</DocumentFragment>
`;

exports[`Activity component > should display TEXT_MESSAGE 1`] = `
<DocumentFragment>
  <div
    class="_theirs_860ff2"
  >
    <div
      class="chat-meta "
    >
      <span
        class="username"
        style="color: rgb(241, 250, 140);"
      >
        alice
      </span>
      <span
        class="muted timestamp"
      >
        12:01 PM
      </span>
    </div>
    <div
      class="chat _bubble_860ff2 _bubbleTheirs_860ff2"
    >
      Hi!
    </div>
  </div>
</DocumentFragment>
`;

exports[`Activity component > should display TOGGLE_LOCK_ROOM 1`] = `
<DocumentFragment>
  <div
    class="_notice_ffcd92 _info_ffcd92"
  >
    <span>
      <span
        class="username"
        style="color: rgb(241, 250, 140);"
      >
        alice
      </span>
       locked the room
    </span>
  </div>
</DocumentFragment>
`;

exports[`Activity component > should display TOGGLE_LOCK_ROOM 2`] = `
<DocumentFragment>
  <div
    class="_notice_ffcd92 _info_ffcd92"
  >
    <span>
      <span
        class="username"
        style="color: rgb(241, 250, 140);"
      >
        alice
      </span>
       unlocked the room
    </span>
  </div>
</DocumentFragment>
`;

exports[`Activity component > should display USER_ACTION 1`] = `
<DocumentFragment>
  <div
    class="_notice_ffcd92 _info_ffcd92"
  >
    * 
    <span
      class="username"
      style="color: rgb(241, 250, 140);"
    >
      alice
    </span>
     did right!
  </div>
</DocumentFragment>
`;

exports[`Activity component > should display USER_ENTER 1`] = `
<DocumentFragment>
  <div
    class="_notice_ffcd92 _info_ffcd92"
  >
    <span>
      <span
        class="username"
        style="color: rgb(241, 250, 140);"
      >
        alice
      </span>
       joined
    </span>
  </div>
</DocumentFragment>
`;

exports[`Activity component > should display USER_EXIT 1`] = `
<DocumentFragment>
  <div
    class="_notice_ffcd92 _info_ffcd92"
  >
    <span>
      <span
        class="username"
        style="color: rgb(241, 250, 140);"
      >
        alice
      </span>
       left
    </span>
  </div>
</DocumentFragment>
`;
